--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<html>
+<head>
+  <title>Rahul | down the rabbit hole</title>
+</head>
+<body>
+  <h3>so, you were searching for rahul (a.k.a [space_monkey])</h3>
+</body>
+</html>
