--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 						<p>down the rabbit hole !!</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
+								<li><a href="https://twitter.com/nullset__" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/rahul.islam.142035" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://in.linkedin.com/in/rahulislam" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
 								<li><a href="https://github.com/rahul-islam" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:rahul.islam3@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
